Changelog
=========

4.5-dev - (unreleased)
----------------------

4.4 - (2011-11-28)
------------------
 * Bug fix: Fixed the all items links of whatsnewgallery in dc view 
  [demarant #4784]

4.3 - (2011-11-22)
------------------
* Bug fix: Made all base objects theme taggable
  [voineali #4740]

4.2 - (2011-11-21)
------------------
* Bug fix: Made all base content theme taggable
  [voineali #4740]

4.1 - (2011-11-18)
------------------
* Change: Added ThemesField to be used with ThemeTaggable Content-Types
  [voineali #4694]
* Change: Made Themes tab hidden as it already in Categorization tab
  [voineali #4694]

4.0 - (2011-11-18)
------------------
* Bugfix: Fixed theme title in portlets [szabozo0 #4691]
* Change: Migrated mediacentre_view from custom [szabozo0 #4161]
* Bugfix: Removed "Promote to theme centre" from tab
  [szabozo0 #4635]
* Feature: Implemented right logic and display of "Subtopics" under a theme.
  [demarant #4610]
* Bugfix: Fixed date format [szabozo0 #4549]
* Change: removed the subtopics listing on topic entrance page. it was just
  redundant with the right navigation and tabs. most of the content is outdated.
  [demarant #4537]
* Change: Added themes tab on video edit page [szabozo0 #4510]
* Change: Added upgrade step to make IThemeTaggable navigation roots
  [voineali #4376]
* Change: #4206, #4458 Made the portlet themes as viewlet and registered below content title. css cleanup. [demarant]
* Bugfix: Fixed publishing dates on the portlets under Theme Centre [szabozo0 #4440]
* Change: Reactivated Products.PloneHelpCenter [szabozo0 #4430]
* Change: Removed the @@proxy view, using python:path() instead
  [tiberich #4257]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [ghicaale #4257]

1.6 - (2011-04-01)
------------------
* Cleanup: Removed PloneRSSPortlet [voineali #4169]
* Bug fix: Added translation domain to ZCML files [voineali #4139]

1.5 - (2011-03-09)
------------------